fix layout icons on mobile

--- a/public/assets/css/aiz-modern-seller.css
+++ b/public/assets/css/aiz-modern-seller.css
@@ -502,7 +502,8 @@
             padding: 13px 13px;
         }
         .content-menu-icons ul {
-            width: 90%;
+            width: 100%;
+            padding: 0px;
             display: flex;
             align-content: flex-start;
             justify-content: center;
